# webui

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  404.html  BENCHMARKS.md  CNAME  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  SUPPORT.md  api-examples.html  azure-pipelines-cd.yml  btjs.code-workspace  clippy.toml  code-block.css  code-comparison.css  components.js  deny.toml  docs-playground.css  docs-theme-toggle.css  feature-gap-analysis.md  hashmap.json  index.html  index.js  markdown-examples.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  search-index.json  todo.md  tsconfig.json  turbo.json  webui-blockquote.css  webui.code-workspace
crates/webui/: Cargo.toml  README.md
crates/webui-bench-support/: Cargo.toml  README.md
crates/webui-bench-support/src/: alloc.rs  baseline.rs  cpu.rs  lib.rs  measure.rs  report.rs
crates/webui-cli/: Cargo.toml  README.md
crates/webui-cli/src/: main.rs  output.rs
crates/webui-cli/src/commands/: build.rs  build_tests.rs  common.rs  component_assets.rs  desktop.rs  inspect.rs  inspect_tests.rs  mod.rs  serve.rs  start.rs  state_schema.rs
crates/webui-cli/src/utils/: error.rs  mod.rs  output.rs
crates/webui-desktop/: Cargo.toml  README.md
crates/webui-desktop-cli/: Cargo.toml  README.md
crates/webui-desktop-cli/src/: frame.rs  lib.rs  linux.rs  macos.rs  main.rs  windows.rs
crates/webui-desktop/proto/: webui_desktop.proto
crates/webui-desktop/src/: app.rs  bundle.rs  error.rs  ipc.rs  lib.rs  package.rs  path.rs  protocol.rs  runtime.rs
crates/webui-dev-server/: Cargo.toml  README.md
crates/webui-dev-server/src/: inject.rs  lib.rs  livereload.rs  path.rs  reporter.rs  serve.rs  watch.rs  worker.rs
crates/webui-discovery/: Cargo.toml  README.md
crates/webui-discovery/src/: cache.rs  lib.rs  npm.rs
crates/webui-expressions/: Cargo.toml  README.md
crates/webui-expressions/benches/: expressions_bench.rs
crates/webui-expressions/src/: lib.rs  tests.rs
crates/webui-ffi/: Cargo.toml  README.md  build.rs
crates/webui-ffi/benches/: prepared_protocol_bench.rs  protocol_bench.rs
crates/webui-ffi/include/: webui_ffi.h
crates/webui-ffi/src/: lib.rs
crates/webui-ffi/tests/: ffi_test.rs
crates/webui-ffi/tests/csharp/: WebUIFFITest.cs  WebUIFFITest.csproj
crates/webui-ffi/tests/fixtures/: expected_output.html  simple.html  state.json
crates/webui-ffi/tests/go/: go.mod  webui_ffi.go  webui_ffi_test.go
crates/webui-ffi/tests/python/: test_webui_ffi.py
crates/webui-handler/: Cargo.toml  README.md
crates/webui-handler/benches/: bootstrap_state_bench.rs  handler_bench.rs
crates/webui-handler/src/: css_module.rs  html_encode.rs  lib.rs  plugin.rs  route_handler.rs  route_matcher.rs  route_renderer.rs
crates/webui-handler/src/plugin/: fast.rs  fast_v2.rs  fast_v3.rs  mod.rs  webui.rs
crates/webui-handler/src/tests/: mod.rs  render_attributes.rs  render_core.rs  render_nested.rs
crates/webui-node/: Cargo.toml  README.md  build.rs
crates/webui-node/bench/: ffi_cpu_bench.mjs
crates/webui-node/src/: lib.rs  tests.rs
crates/webui-parser/: Cargo.toml  README.md
crates/webui-parser/benches/: parser_bench.rs
crates/webui-parser/src/: asset_filename.rs  comment_policy.rs  component_registry.rs  component_registry_tests.rs  condition_parser.rs  condition_parser_tests.rs  css_link.rs  css_parser.rs  diagnostic.rs  error.rs  fast_template_source.rs  handlebars_parser.rs  handlebars_parser_tests.rs  html_parser.rs  hydration.rs  lib.rs  route_parser.rs  suggest.rs  tag_scan.rs
crates/webui-parser/src/plugin/: fast.rs  fast_host_attrs.rs  fast_v2.rs  fast_v3.rs  mod.rs  webui.rs
crates/webui-parser/src/tests/: mod.rs  parse_attributes.rs  parse_directives.rs  parse_elements.rs  parse_handlebars.rs  parse_integration.rs
crates/webui-press/: Cargo.toml  README.md  package.json
crates/webui-press/components/code-block/: code-block.html  code-block.ts
crates/webui-press/components/webui-blockquote/: webui-blockquote.html  webui-blockquote.ts
crates/webui-press/components/webui-press-tab/: webui-press-tab.css  webui-press-tab.ts
crates/webui-press/components/webui-press-tab-panel/: webui-press-tab-panel.ts
crates/webui-press/components/webui-press-tabs/: webui-press-tabs.css  (+1 more)
crates/webui-press/src/: build.rs  bundler.rs  content.rs  error.rs  lib.rs  main.rs  markdown.rs  serve.rs  state.rs  types.rs
crates/webui-press/template/: docs.css  index.html  index.ts
crates/webui-protocol/: Cargo.toml  README.md  build.rs
crates/webui-protocol/benches/: protocol_bench.rs
crates/webui-protocol/proto/: webui.proto
crates/webui-protocol/src/: attrs.rs  gen_webui.rs  lib.rs  projection_manifest.rs  protobuf.rs  tests.rs
crates/webui-state/: Cargo.toml  README.md
crates/webui-state/benches/: state_bench.rs
crates/webui-state/src/: lib.rs
crates/webui-test-utils/: Cargo.toml  README.md
crates/webui-test-utils/src/: lib.rs
crates/webui-tokens/: Cargo.toml  README.md
crates/webui-tokens/src/: error.rs  lib.rs
crates/webui-wasm/: Cargo.toml  README.md
crates/webui-wasm/src/: error.rs  handler.rs  lib.rs  parser.rs  tests.rs
crates/webui/benches/: README.md  contact_book_bench.rs  streaming_bench.rs
crates/webui/examples/: state_cpu_bench.rs  streaming_e2e_ttfb_bench.rs  streaming_resource_bench.rs
crates/webui/src/: component_assets.rs  error.rs  lib.rs  projection.rs  server.rs  streaming.rs
crates/webui/tests/: example_apps_hydration.rs
examples/demo/server/: Cargo.toml
examples/hello-world/: Cargo.toml  README.md  data.json  index.html
examples/hello-world/src/: main.rs  watcher.rs
examples/integration/hyper/: Cargo.toml  README.md
examples/integration/rust/: Cargo.toml  README.md
examples/integration/ssr-performance-showdown/: Cargo.toml  README.md
examples/integration/tiny_http/: Cargo.toml  README.md
xtask/: Cargo.toml
xtask/src/: bench.rs  build_apps.rs  build_examples.rs  build_wasm.rs  dev.rs  dotnet.rs  e2e.rs  e2e_approve.rs  license_headers.rs  main.rs  process.rs  publish.rs  util.rs  version.rs  windows_local.rs
(+2017 files in other folders)
