[workspace]
members = [
    "crates/*",
    "xtask",
    "examples/integration/rust",
    "examples/integration/ssr-performance-showdown",
    "examples/app/commerce/server",
]
resolver = "2"

[workspace.package]
version = "0.0.5"
edition = "2021"
authors = ["Microsoft Edge"]
license = "MIT"
repository = "https://github.com/microsoft/webui"
homepage = "https://microsoft.github.io/webui"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
anyhow = "1.0.101"
log = "0.4.29"
env_logger = "0.11.9"
async-trait = "0.1.89"
tokio = { version = "1.49.0", features = ["full"] }
clap = { version = "4", features = ["derive", "color"] }
console = "0.16.2"
ctrlc = "3.4"
prost = "0.14.3"
napi = { version = "3", features = ["napi4"] }
napi-derive = "3"
wasm-bindgen = "=0.2.100"
serde-wasm-bindgen = "0.6"
actix-web = "4.11.0"
rustls = "0.23"
rcgen = "0.13"
awc = "3"
hmac = "0.12"
sha2 = "0.10"
expand-tilde = "0.6.1"
mime_guess = "2.0.5"
html-escape = "0.2.13"
tree-sitter = "0.26.5"
tree-sitter-language = "0.1.7"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.25.0"
walkdir = "2.5.0"
libc = "0.2.183"
which = "8.0.2"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
] }

# Test dependencies
criterion = "0.8.2"
mockall = "0.14.0"
tempfile = "3.25.0"
tokio-test = "0.4.5"

# Build dependencies
prost-build = "0.14.3"
napi-build = "2"
cbindgen = "0.29.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev]
opt-level = 0
