[workspace]
members = [
    "crates/*",
    "xtask",
    "examples/integration/rust",
    "examples/integration/ssr-performance-showdown",
    "examples/integration/streaming-browser-bench/server",
    "examples/app/commerce/server",
    "examples/demo/server",
]
resolver = "2"

[workspace.package]
version = "0.0.12"
edition = "2021"
rust-version = "1.93"
authors = ["Microsoft Edge"]
license = "MIT"
repository = "https://github.com/microsoft/webui"
homepage = "https://microsoft.github.io/webui"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
anyhow = "1.0.101"
log = "0.4.29"
env_logger = "0.11.9"
tokio = { version = "1.52.1", features = ["full"] }
clap = { version = "4.6.1", features = ["derive", "color"] }
console = "0.16.3"
rayon = "1.12.0"
ctrlc = "3.4"
prost = "0.14.3"
napi = { version = "3.8.5", features = ["napi4"] }
napi-derive = "3.5.4"
wasm-bindgen = "=0.2.100"
serde-wasm-bindgen = "0.6"
actix-web = "4.11.0"
rustls = "0.23.39"
rcgen = "0.14.7"
awc = "3"
hmac = "0.13.0"
sha2 = "0.11.0"
expand-tilde = "0.6.1"
mime_guess = "2.0.5"
html-escape = "0.2.13"
async-stream = "0.3.6"
futures-util = "0.3.31"
tokio-stream = "0.1.18"
bytes = "1.10.1"
crossbeam-queue = "0.3.12"
memchr = "2.8.0"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
percent-encoding = "2.3.2"
tree-sitter = "0.26.8"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.25.0"
walkdir = "2.5.0"
toml = "0.9.8"
comrak = { version = "0.52.0", default-features = false, features = ["syntect"] }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "html", "plist-load", "regex-onig"] }
serde_yaml = "0.9"
libc = "0.2.186"
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }
which = "8.0.2"

# Test dependencies
criterion = "0.8.2"
tempfile = "3.27.0"

# Build dependencies
prost-build = "0.14.3"
napi-build = "2"
cbindgen = "0.29.2"

[workspace.lints.clippy]
# Lint groups (lower priority so individual lints can override)
perf = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
# Performance
large_enum_variant = "deny"
large_stack_arrays = "deny"
large_futures = "deny"
needless_collect = "deny"
redundant_clone = "deny"
unnecessary_to_owned = "deny"
inefficient_to_string = "deny"
manual_memcpy = "deny"
naive_bytecount = "deny"
# Security & correctness
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
cast_possible_wrap = "deny"
# Memory discipline
rc_buffer = "deny"
large_types_passed_by_value = "deny"
vec_box = "deny"
unnecessary_box_returns = "deny"
# Documentation
# doc_markdown = "warn"  # TODO: enable after fixing 101 existing violations

[workspace.lints.rust]
unsafe_code = "deny"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev]
opt-level = 0
