[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
console = { workspace = true }
ctrlc = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
which = { workspace = true }

[lints]
workspace = true
