[package]
name = "webui-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for building WebUI applications"

[[bin]]
name = "webui"
path = "src/main.rs"

[dependencies]
webui = { path = "../webui", features = ["cli"] }
webui-handler = { path = "../webui-handler" }
webui-protocol = { path = "../webui-protocol" }
webui-discovery = { path = "../webui-discovery" }
clap = { workspace = true }
anyhow = { workspace = true }
console = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
actix-web = { workspace = true }
awc = { workspace = true }
expand-tilde = { workspace = true }
mime_guess = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
webui-protocol = { path = "../webui-protocol" }
