[package]
name = "microsoft-webui-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for building WebUI applications"

[[bin]]
name = "webui"
path = "src/main.rs"

[dependencies]
microsoft-webui = { path = "../webui", features = ["cli"] }
microsoft-webui-handler = { path = "../webui-handler" }
microsoft-webui-protocol = { path = "../webui-protocol" }
microsoft-webui-discovery = { path = "../webui-discovery" }
clap = { workspace = true }
anyhow = { workspace = true }
console = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
actix-web = { workspace = true }
awc = { workspace = true }
expand-tilde = { workspace = true }
mime_guess = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
microsoft-webui-protocol = { path = "../webui-protocol" }
