[package]
name = "microsoft-webui-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "CLI tool for building WebUI applications"
keywords = ["webui", "cli", "build-tool", "ssr", "tooling"]
categories = ["command-line-utilities", "development-tools", "web-programming"]

[[bin]]
name = "webui"
path = "src/main.rs"

[dependencies]
microsoft-webui = { path = "../webui", version = "0.0.3", features = ["cli"] }
microsoft-webui-handler = { path = "../webui-handler", version = "0.0.3" }
microsoft-webui-protocol = { path = "../webui-protocol", version = "0.0.3" }
microsoft-webui-discovery = { path = "../webui-discovery", version = "0.0.3" }
microsoft-webui-tokens = { path = "../webui-tokens", version = "0.0.3" }
clap = { workspace = true }
anyhow = { workspace = true }
console = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
actix-web = { workspace = true }
awc = { workspace = true }
expand-tilde = { workspace = true }
mime_guess = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
microsoft-webui-protocol = { path = "../webui-protocol", version = "0.0.3" }
