[package]
name = "webui-expressions"
description = "Core expression evaluation for WebUI framework"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
webui-protocol = { path = "../webui-protocol" }
webui-state = { path = "../webui-state" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
webui-test-utils = { path = "../webui-test-utils" }
criterion = { workspace = true }

[[bench]]
name = "expressions_bench"
harness = false
