[package]
name = "microsoft-webui-ffi"
description = "Core FFI bindings for WebUI framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["webui", "ffi", "c-api", "bindings", "ssr"]
categories = ["api-bindings", "web-programming"]

[lib]
name = "webui_ffi"
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
microsoft-webui-handler = { path = "../webui-handler", version = "0.0.1" }
microsoft-webui-parser = { path = "../webui-parser", version = "0.0.1" }
microsoft-webui-protocol = { path = "../webui-protocol", version = "0.0.1" }
serde = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }

# Platform-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }

[build-dependencies]
cbindgen = { workspace = true }
