[package]
name = "webui-handler"
description = "Core rust handler for WebUI framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
webui-protocol = { path = "../../crates/webui-protocol" }
webui-expressions = { path = "../../crates/webui-expressions" }
webui-state = { path = "../webui-state" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
html-escape = "0.2.13"

[dev-dependencies]
webui-test-utils = { path = "../webui-test-utils" }
tokio = { version = "1.49.0", features = ["full"] }
