[package]
name = "microsoft-webui-handler"
description = "Core rust handler for WebUI framework"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "webui_handler"

[dependencies]
microsoft-webui-protocol = { path = "../../crates/webui-protocol" }
microsoft-webui-expressions = { path = "../../crates/webui-expressions" }
microsoft-webui-state = { path = "../webui-state" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
html-escape = { workspace = true }

[dev-dependencies]
microsoft-webui-test-utils = { path = "../webui-test-utils" }
tokio = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "handler_bench"
harness = false
