[package]
name = "microsoft-webui-node"
description = "Node.js native addon for WebUI framework via napi-rs"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "webui_node"
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
microsoft-webui = { path = "../webui" }
microsoft-webui-handler = { path = "../webui-handler" }
microsoft-webui-protocol = { path = "../webui-protocol" }
serde_json = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }

[dev-dependencies]
microsoft-webui-parser = { path = "../webui-parser", default-features = false }
microsoft-webui-test-utils = { path = "../webui-test-utils" }
tempfile = { workspace = true }
