[package]
name = "webui-parser"
description = "Core parser for WebUI framework"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["fs"]
fs = ["walkdir"]
cli = ["clap"]

[dependencies]
webui-expressions = { path = "../webui-expressions" }
webui-protocol = { path = "../webui-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-language = { workspace = true }
tree-sitter-html = { workspace = true }
tree-sitter-css = { workspace = true }
walkdir = { workspace = true, optional = true }
clap = { workspace = true, optional = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }
webui-test-utils = { path = "../webui-test-utils" }
criterion = { workspace = true }

[[bench]]
name = "parser_bench"
harness = false
