[package]
name = "microsoft-webui-parser"
description = "Core parser for WebUI framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["webui", "parser", "html", "templates", "ssr"]
categories = ["parser-implementations", "template-engine", "web-programming"]

[lib]
name = "webui_parser"

[features]
default = ["fs"]
fs = ["walkdir"]
cli = ["clap"]

[dependencies]
microsoft-webui-expressions = { path = "../webui-expressions", version = "0.0.2" }
microsoft-webui-protocol = { path = "../webui-protocol", version = "0.0.2" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-language = { workspace = true }
tree-sitter-html = { workspace = true }
tree-sitter-css = { workspace = true }
walkdir = { workspace = true, optional = true }
clap = { workspace = true, optional = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }
microsoft-webui-test-utils = { path = "../webui-test-utils", version = "0.0.2" }
criterion = { workspace = true }

[[bench]]
name = "parser_bench"
harness = false
