[package]
name = "microsoft-webui-press"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-performance Static Site Generator powered by WebUI Framework"
default-run = "webui-press"
readme = "README.md"

[lib]
name = "webui_docs"
path = "src/lib.rs"

[[bin]]
name = "webui-press"
path = "src/main.rs"

[dependencies]
microsoft-webui = { path = "../webui", version = "0.0.10", features = ["cli"] }
microsoft-webui-handler = { path = "../webui-handler", version = "0.0.10" }
microsoft-webui-protocol = { path = "../webui-protocol", version = "0.0.10" }

# Markdown + syntax highlighting
comrak = { version = "0.52.0", default-features = false, features = ["syntect"] }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "html", "plist-load", "regex-onig"] }

# Config + frontmatter
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# CLI
clap = { workspace = true }
console = { workspace = true }
anyhow = { workspace = true }

# Performance
rayon = { workspace = true }

# Utilities
thiserror = { workspace = true }
