[package]
name = "microsoft-webui-press"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-performance Static Site Generator powered by WebUI Framework"
default-run = "webui-press"
readme = "README.md"

[lib]
name = "webui_docs"
path = "src/lib.rs"

[[bin]]
name = "webui-press"
path = "src/main.rs"

[dependencies]
microsoft-webui = { path = "../webui", version = "0.0.12", features = ["cli"] }
microsoft-webui-handler = { path = "../webui-handler", version = "0.0.12" }
microsoft-webui-protocol = { path = "../webui-protocol", version = "0.0.12" }

# Markdown + syntax highlighting
comrak = { workspace = true }
syntect = { workspace = true }

# Config + frontmatter
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# CLI
clap = { workspace = true }
console = { workspace = true }
anyhow = { workspace = true }

# Performance
rayon = { workspace = true }

# Utilities
thiserror = { workspace = true }

# Dev server (`webui-press serve`)
microsoft-webui-dev-server = { path = "../webui-dev-server", version = "0.0.12" }
actix-web = { workspace = true }
tokio = { workspace = true }
mime_guess = { workspace = true }
walkdir = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
