[package]
name = "webui-protocol"
description = "Core protocol definitions for WebUI framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "protocol_bench"
harness = false
