[package]
name = "microsoft-webui-protocol"
description = "Core protocol definitions for WebUI framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["webui", "protocol", "protobuf", "binary", "serialization"]
categories = ["encoding", "web-programming"]

[lib]
name = "webui_protocol"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "protocol_bench"
harness = false

[lints]
workspace = true
