[package]
name = "webui-state"
description = "Core state management for WebUI framework"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
webui-test-utils = { path = "../webui-test-utils" }
criterion = { workspace = true }

[[bench]]
name = "state_bench"
harness = false