[package]
name = "microsoft-webui-state"
description = "Core state management for WebUI framework"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "webui_state"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
microsoft-webui-test-utils = { path = "../webui-test-utils" }
criterion = { workspace = true }

[[bench]]
name = "state_bench"
harness = false