[package]
name = "microsoft-webui-state"
description = "Core state management for WebUI framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["webui", "state", "ssr", "rendering", "templates"]
categories = ["web-programming"]

[lib]
name = "webui_state"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
microsoft-webui-test-utils = { path = "../webui-test-utils", version = "0.0.4" }
criterion = { workspace = true }

[[bench]]
name = "state_bench"
harness = false
