[package]
name = "webui-test-utils"
description = "Test utilities for WebUI framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde_json = { workspace = true }
mockall = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
webui-protocol = { path = "../webui-protocol" }