[package]
name = "microsoft-webui-test-utils"
description = "Test utilities for WebUI framework"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "webui_test_utils"

[dependencies]
serde_json = { workspace = true }
mockall = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
microsoft-webui-protocol = { path = "../webui-protocol" }