[package]
name = "microsoft-webui-test-utils"
description = "Test utilities for WebUI framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["webui", "testing", "test-utils", "ssr", "mocking"]
categories = ["development-tools::testing", "web-programming"]

[lib]
name = "webui_test_utils"

[dependencies]
serde_json = { workspace = true }
mockall = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
microsoft-webui-protocol = { path = "../webui-protocol", version = "0.0.11" }

[lints]
workspace = true
